--- a/loginpage.html
+++ b/loginpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>University Management System Login</title>
+    <title>University Management Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=100%, initial-scale=1.0">
     <style>
